--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Titulo nuevo</h1>
+
+    <form action="#" method="GET">
+        <button type="submit" value="Enviar"> </button>
+    </form>
 </body>
 </html>
